--- a/myzayna_frontend/src/index.css
+++ b/myzayna_frontend/src/index.css
@@ -14,9 +14,13 @@
 
 body {
   margin: 0;
-  background-color: #faaca8;
-  background-image: linear-gradient(19deg, #faaca8 0%, #ddd6f3 100%);
+  padding: 0;
+  overflow: hidden;
+  background: linear-gradient(to bottom, #fce4ec, #f8bbd0, #f48fb1);
+  background-attachment: fixed;
+  font-family: 'Inter', sans-serif;
 }
+
 
 body.greenScreen {
   background-color: #00ff00;
